--- a/index.html
+++ b/index.html
@@ -114,10 +114,18 @@
                 <a href="http://192.168.1.111/admin" class="btn btn-primary">Click me!</a>
             </div>
         </div>
+        <div id="twitch-embed"></div>
     </main>
 
-
-    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+    <script type="text/javascript">
+        new Twitch.Embed("twitch-embed", {
+            width: 854,
+            height: 480,
+            channel: "forsen",
+            parent: ["https://www.github.com"]
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
