--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             width: 854,
             height: 480,
             channel: "forsen",
-            parent: ["zachvlat.github.io"]
+            parent: ["github.io" , "github.com"]
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
