--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
             <li class="nav-item">
                 <a class="nav-link active" href="https://github.com/zachvlat">GitHub</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="https://twitter.com/Zatsando">Twitter</a>
-            </li>
         </ul>
     </header>
 
@@ -37,7 +34,7 @@
                 <p class="card-text">Nextcloud is open source file sync and share software for everyone from individuals
                     operating the free Nextcloud Server in the privacy of their own home, to large enterprises and
                     service providers supported by the Nextcloud Enterprise Subscription.</p>
-                <a href="http://192.168.1.111:81/index.php" class="btn btn-primary">Click me!</a>
+                <a href="http://192.168.1.111/nextcloud" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
         </div>
         <div class="card">
@@ -47,28 +44,69 @@
                 <p class="card-text">Pi-hole is a Linux network-level advertisement and Internet tracker blocking
                     application which acts as a DNS sinkhole and optionally a DHCP server, intended for use on a private
                     network. It is designed for low-power embedded devices with network capability.</p>
-                <a href="http://192.168.1.111/admin" class="btn btn-primary">Click me!</a>
+                <a href="http://192.168.1.111/admin" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
         </div>
         <div class="card">
-            <img src="./assets/qBittorrent.png" class="rounded float-end" alt="qBittorrent">
+            <img src="./assets/portainer.png" class="rounded float-end" alt="portainer">
             <div class="card-body">
-                <h5 class="card-title">qBittorrent</h5>
-                <p class="card-text">qBittorrent is a cross-platform free and open-source BitTorrent client written in
-                    native C++. It relies on Boost, Qt 6 toolkit and the libtorrent-rasterbar library, with an optional
-                    search engine written in Python.</p>
-                <a href="http://192.168.1.111:8081" class="btn btn-primary">Click me!</a>
+                <h5 class="card-title">Portainer</h5>
+                <p class="card-text">Portainer gives you hybrid and multi-cloud, multi-cluster, multi-device, container
+                    management. Portainer supports Kubernetes, Docker, Swarm and Nomad running in any data center,
+                    cloud, network edge or IIOT device.</p>
+                <a href="http://192.168.1.111:9000" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
         </div>
         <div class="card">
-            <img src="./assets/plex.png" class="rounded float-end" alt="plex">
+            <img src="./assets/jellyfin.png" class="rounded float-end" alt="Jellyfin">
             <div class="card-body">
-                <h5 class="card-title">Plex</h5>
-                <p class="card-text">Plex is an American streaming media service and a client–server media player
-                    platform, made by Plex, Inc. The Plex Media Server organizes video, audio, and photos from a user's
-                    collections and from online services, and streams it to the players.
+                <h5 class="card-title">Jellyfin</h5>
+                <p class="card-text">Jellyfin is a free and open-source media server and suite of multimedia
+                    applications designed to organize, manage, and share digital media files to networked devices.
                 </p>
-                <a href="http://192.168.1.111:32400" class="btn btn-primary">Click me!</a>
+                <a href="http://192.168.1.111:8096" target="_blank" class="btn btn-primary">Click me!</a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./assets/transmission.jpg" class="rounded float-end" alt="transmission">
+            <div class="card-body">
+                <h5 class="card-title">Transmission</h5>
+                <p class="card-text">Transmission is a BitTorrent client which features a variety of user interfaces on
+                    top of a cross-platform back-end. Transmission is free software licensed under the terms of the GNU
+                    General Public License, with parts under the MIT License.
+                </p>
+                <a href="http://192.168.1.111:9091" target="_blank" class="btn btn-primary">Click me!</a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./assets/freshrss.png" class="rounded float-end" alt="freshrss">
+            <div class="card-body">
+                <h5 class="card-title">FreshRSS</h5>
+                <p class="card-text">FreshRSS, a free, self-hostable feeds aggregator. FreshRSS is a self-hosted RSS and
+                    Atom feed aggregator. It is lightweight, easy to work with, powerful, and customizable.
+                </p>
+                <a href="http://192.168.1.111:8132" target="_blank" class="btn btn-primary">Click me!</a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./assets/deemix.jpg" class="rounded float-end" alt="deemix">
+            <div class="card-body">
+                <h5 class="card-title">deemix</h5>
+                <p class="card-text">deemix (lowercase) is a barebone deezer downloader library built from the ashes of
+                    Deezloader Remix.
+                </p>
+                <a href="http://192.168.1.111:9666" target="_blank" class="btn btn-primary">Click me!</a>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./assets/homeassistant.png" class="rounded float-end" alt="freshrss">
+            <div class="card-body">
+                <h5 class="card-title">HomeAssistant</h5>
+                <p class="card-text">Use the official Home Assistant apps, a convenient companion to quickly control
+                    your devices and be notified when things happen in your home, even on your wrist using the Apple
+                    Watch.
+                </p>
+                <a href="http://192.168.1.111:8999" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
         </div>
     </main>
