--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h5 class="card-title">Nextcloud</h5>
                 <p class="card-text">Nextcloud is open source file sync and share software for everyone from individuals
                     operating the free Nextcloud Server in the privacy of their own home, to large enterprises and
-                    service providers supported by the Nextcloud Enterprise Subscription.</p>
+                    service providers.</p>
                 <a href="http://192.168.1.111/nextcloud" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
         </div>
@@ -43,7 +43,7 @@
                 <h5 class="card-title">PiHole</h5>
                 <p class="card-text">Pi-hole is a Linux network-level advertisement and Internet tracker blocking
                     application which acts as a DNS sinkhole and optionally a DHCP server, intended for use on a private
-                    network. It is designed for low-power embedded devices with network capability.</p>
+                    network.</p>
                 <a href="http://192.168.1.111/admin" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
         </div>
@@ -73,7 +73,7 @@
                 <h5 class="card-title">Transmission</h5>
                 <p class="card-text">Transmission is a BitTorrent client which features a variety of user interfaces on
                     top of a cross-platform back-end. Transmission is free software licensed under the terms of the GNU
-                    General Public License, with parts under the MIT License.
+                    General Public License.
                 </p>
                 <a href="http://192.168.1.111:9091" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
@@ -103,8 +103,7 @@
             <div class="card-body">
                 <h5 class="card-title">HomeAssistant</h5>
                 <p class="card-text">Use the official Home Assistant apps, a convenient companion to quickly control
-                    your devices and be notified when things happen in your home, even on your wrist using the Apple
-                    Watch.
+                    your devices and be notified when things happen in your home.
                 </p>
                 <a href="http://192.168.1.111:8999" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
