--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             <div class="card-body">
                 <h5 class="card-title">Portainer</h5>
                 <p class="card-text">Portainer gives you hybrid and multi-cloud, multi-cluster, multi-device, container
-                    management. Portainer supports Kubernetes, Docker, Swarm and Nomad running in any data center,
-                    cloud, network edge or IIOT device.</p>
+                    management. Portainer supports Kubernetes, Docker, Swarm and Nomad.</p>
                 <a href="http://192.168.1.111:9000" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
         </div>
@@ -72,8 +71,7 @@
             <div class="card-body">
                 <h5 class="card-title">Transmission</h5>
                 <p class="card-text">Transmission is a BitTorrent client which features a variety of user interfaces on
-                    top of a cross-platform back-end. Transmission is free software licensed under the terms of the GNU
-                    General Public License.
+                    top of a cross-platform back-end.
                 </p>
                 <a href="http://192.168.1.111:9091" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
@@ -103,7 +101,7 @@
             <div class="card-body">
                 <h5 class="card-title">HomeAssistant</h5>
                 <p class="card-text">Use the official Home Assistant apps, a convenient companion to quickly control
-                    your devices and be notified when things happen in your home.
+                    your devices.
                 </p>
                 <a href="http://192.168.1.111:8999" target="_blank" class="btn btn-primary">Click me!</a>
             </div>
