--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
             </div>
         </div>
         <div class="card">
+            <img src="./assets/filebrowser.png" class="rounded float-end" alt="filebrowser">
+            <div class="card-body">
+                <h5 class="card-title">Portainer</h5>
+                <p class="card-text">filebrowser provides a file managing interface within a specified directory and it can be used to upload, delete, preview, rename and edit your files.</p>
+                <a href="http://192.168.1.111:8082" target="_blank" class="btn btn-primary">Click me!</a>
+            </div>
+        </div>
+        <div class="card">
             <img src="./assets/jellyfin.png" class="rounded float-end" alt="Jellyfin">
             <div class="card-body">
                 <h5 class="card-title">Jellyfin</h5>
