--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>ZatsNetHub</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="ZatsNetHub: A collection of useful applications hosted on ZatsNET.">
+    <meta name="keywords"
+        content="ZatsNetHub, Nextcloud, Portainer, Filebrowser, Jellyfin, Transmission, FreshRSS, deemix, HomeAssistant, AudiobookSelf, Navidrome, Bitwarden, NGINX Proxy Manager, Podgrab">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
@@ -12,118 +15,112 @@
 
 <body>
     <header>
-        <h1 class="glow">ZatsNET Hub</h1>
-        <br>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link active" href="mailto:zatsando@protonmail.com">Email</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="https://github.com/zachvlat">GitHub</a>
-            </li>
-        </ul>
+        <h1 class="text-center glow mb-4">ZatsNET Hub</h1>
     </header>
 
-    <br>
-
-    <main>
-        <div class="card">
-            <img src="./assets/nextcloud.png" class="rounded float-start" alt="nc-logo">
-            <div class="card-body">
-                <h5 class="card-title">Nextcloud</h5>
-                <p class="card-text">Nextcloud is open source file sync and share software for everyone from individuals
-                    operating the free Nextcloud Server in the privacy of their own home, to large enterprises and
-                    service providers.</p>
-                <a href="http://192.168.1.111/nextcloud" target="_blank" class="btn btn-primary">Click me!</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="./assets/pihole.png" class="rounded float-end" alt="hole">
-            <div class="card-body">
-                <h5 class="card-title">PiHole</h5>
-                <p class="card-text">Pi-hole is a Linux network-level advertisement and Internet tracker blocking
-                    application which acts as a DNS sinkhole and optionally a DHCP server, intended for use on a private
-                    network.</p>
-                <a href="http://192.168.1.111/admin" target="_blank" class="btn btn-primary">Click me!</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="./assets/portainer.png" class="rounded float-end" alt="portainer">
-            <div class="card-body">
-                <h5 class="card-title">Portainer</h5>
-                <p class="card-text">Portainer gives you hybrid and multi-cloud, multi-cluster, multi-device, container
-                    management. Portainer supports Kubernetes, Docker, Swarm and Nomad.</p>
-                <a href="http://192.168.1.111:9000" target="_blank" class="btn btn-primary">Click me!</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="./assets/filebrowser.png" class="rounded float-end" alt="filebrowser">
-            <div class="card-body">
-                <h5 class="card-title">Filebrowser</h5>
-                <p class="card-text">Filebrowser provides a file managing interface within a specified directory and it can be used to upload, delete, preview, rename and edit your files.</p>
-                <a href="http://192.168.1.111:8082" target="_blank" class="btn btn-primary">Click me!</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="./assets/jellyfin.png" class="rounded float-end" alt="Jellyfin">
-            <div class="card-body">
-                <h5 class="card-title">Jellyfin</h5>
-                <p class="card-text">Jellyfin is a free and open-source media server and suite of multimedia
-                    applications designed to organize, manage, and share digital media files to networked devices.
-                </p>
-                <a href="http://192.168.1.111:8096" target="_blank" class="btn btn-primary">Click me!</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="./assets/transmission.jpg" class="rounded float-end" alt="transmission">
-            <div class="card-body">
-                <h5 class="card-title">Transmission</h5>
-                <p class="card-text">Transmission is a BitTorrent client which features a variety of user interfaces on
-                    top of a cross-platform back-end.
-                </p>
-                <a href="http://192.168.1.111:9091" target="_blank" class="btn btn-primary">Click me!</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="./assets/freshrss.png" class="rounded float-end" alt="freshrss">
-            <div class="card-body">
-                <h5 class="card-title">FreshRSS</h5>
-                <p class="card-text">FreshRSS, a free, self-hostable feeds aggregator. FreshRSS is a self-hosted RSS and
-                    Atom feed aggregator. It is lightweight, easy to work with, powerful, and customizable.
-                </p>
-                <a href="http://192.168.1.111:8132" target="_blank" class="btn btn-primary">Click me!</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="./assets/deemix.jpg" class="rounded float-end" alt="deemix">
-            <div class="card-body">
-                <h5 class="card-title">deemix</h5>
-                <p class="card-text">deemix (lowercase) is a barebone deezer downloader library built from the ashes of
-                    Deezloader Remix.
-                </p>
-                <a href="http://192.168.1.111:9666" target="_blank" class="btn btn-primary">Click me!</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="./assets/homeassistant.png" class="rounded float-end" alt="freshrss">
-            <div class="card-body">
-                <h5 class="card-title">HomeAssistant</h5>
-                <p class="card-text">Use the official Home Assistant apps, a convenient companion to quickly control
-                    your devices.
-                </p>
-                <a href="http://192.168.1.111:8999" target="_blank" class="btn btn-primary">Click me!</a>
-            </div>
+    <main class="container mt-4">
+        <div class="grid-container">
+            <a href="https://nextcloud.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="./assets/nextcloud.png" alt="Nextcloud Logo">
+                <div class="flex-grow-1">
+                    <h5>Nextcloud</h5>
+                    <p>File sync and share software for individuals to enterprises.</p>
+                </div>
+            </a>
+            <a href="https://portainer.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="./assets/portainer.png" alt="Portainer">
+                <div class="flex-grow-1">
+                    <h5>Portainer</h5>
+                    <p>Hybrid multi-cloud, multi-cluster container management.</p>
+                </div>
+            </a>
+            <a href="https://files.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="./assets/filebrowser.png" alt="Filebrowser">
+                <div class="flex-grow-1">
+                    <h5>Filebrowser</h5>
+                    <p>Manage, upload, delete, and edit files within a directory.</p>
+                </div>
+            </a>
+            <a href="https://jellyfin.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="./assets/jellyfin.png" alt="Jellyfin">
+                <div class="flex-grow-1">
+                    <h5>Jellyfin</h5>
+                    <p>Free media server to organize and share digital media files.</p>
+                </div>
+            </a>
+            <a href="https://transmission.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="./assets/transmission.jpg" alt="Transmission">
+                <div class="flex-grow-1">
+                    <h5>Transmission</h5>
+                    <p>BitTorrent client with various user interfaces.</p>
+                </div>
+            </a>
+            <a href="https://rss.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="./assets/freshrss.png" alt="FreshRSS">
+                <div class="flex-grow-1">
+                    <h5>FreshRSS</h5>
+                    <p>Self-hosted RSS and Atom feed aggregator.</p>
+                </div>
+            </a>
+            <a href="https://deemix.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="./assets/deemix.jpg" alt="deemix">
+                <div class="flex-grow-1">
+                    <h5>deemix</h5>
+                    <p>Deezer downloader library built from Deezloader Remix.</p>
+                </div>
+            </a>
+            <a href="https://ha.zatspi.duckdns.org" target="_blank" class="grid-item">
+                <img src="./assets/homeassistant.png" alt="Home Assistant">
+                <div class="flex-grow-1">
+                    <h5>HomeAssistant</h5>
+                    <p>Control your devices with Home Assistant apps.</p>
+                </div>
+            </a>
+            <a href="https://audiobook.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="https://play-lh.googleusercontent.com/9Qjh1GhRcPcUOQLTt-DdnYV2PS9ENidfvkGZ602QWF36KGvLogzcJwCaKTcWBytVGktP=w240-h480" alt="AudiobookSelf">
+                <div class="flex-grow-1">
+                    <h5>AudiobookSelf</h5>
+                    <p>Organize and listen to your audiobooks.</p>
+                </div>
+            </a>
+            <a href="https://navidrome.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="https://avatars.githubusercontent.com/u/26692192?s=200&v=4" alt="Navidrome">
+                <div class="flex-grow-1">
+                    <h5>Navidrome</h5>
+                    <p>Music server and streaming service.</p>
+                </div>
+            </a>
+            <a href="https://bitwarden.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="https://avatars.githubusercontent.com/u/15990069?s=200&v=4" alt="Bitwarden">
+                <div class="flex-grow-1">
+                    <h5>Bitwarden</h5>
+                    <p>Open-source password management solutions.</p>
+                </div>
+            </a>
+            <a href="https://zatspi.duckdns.org/nginx/" target="_blank" class="grid-item">
+                <img src="https://nginxproxymanager.com/logo.svg" alt="NGINX Proxy Manager">
+                <div class="flex-grow-1">
+                    <h5>NGINX Proxy Manager</h5>
+                    <p>Manage your NGINX proxy hosts with ease.</p>
+                </div>
+            </a>
+            <a href="https://podgrab.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="https://artifacthub.io/image/6965ec7c-4ac2-4ccc-aca1-345449c26896@3x" alt="Podgrab">
+                <div class="flex-grow-1">
+                    <h5>Podgrab</h5>
+                    <p>Podcast download and management tool.</p>
+                </div>
+            </a>
         </div>
     </main>
-    <br>
 
-    <script src="myjs.js"></script>
+    <script src="myjs.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"
+        defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"
+        defer></script>
 </body>
 
 </html>
