--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="ZatsNetHub: A collection of useful applications hosted on ZatsNET.">
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/2717/2717124.png">
     <meta name="keywords"
         content="ZatsNetHub, Nextcloud, Portainer, Filebrowser, Jellyfin, Transmission, FreshRSS, deemix, HomeAssistant, AudiobookSelf, Navidrome, Bitwarden, NGINX Proxy Manager, Podgrab">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
