--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
                     <p>Podcast download and management tool.</p>
                 </div>
             </a>
+            <a href="https://kuma.zatspi.duckdns.org/" target="_blank" class="grid-item">
+                <img src="https://github.com/louislam/uptime-kuma/raw/master/public/icon.svg" alt="UptimeKuma">
+                <div class="flex-grow-1">
+                    <h5>Uptime Kuma</h5>
+                    <p>Uptime Kuma is an easy-to-use self-hosted monitoring tool.</p>
+                </div>
+            </a>
         </div>
     </main>
 
